2010-06-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.addin.xml: Set icon for the default code
	  formatting policies panel group to match the per-item one.

	* MonoDevelop.Ide.Desktop/PlatformService.cs: Handle icon for
	  text/plain mimetype.

2010-06-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Desktop/PlatformService.cs: Add a
	  description for the text/plain mimetype.

2010-06-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.addin.xml: Remove nonexistent icon.

2010-06-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Projects.OptionPanels/CodeFormattingPanel.cs:
	  Only show mimetypes with policies.

2010-06-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.CodeCompletion/CompletionListWindow.cs:
	  Remove debug writelines. Disable
	  process-enter-on-exact-match behaviour change or now.

2010-06-15  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Components.DockToolbars/DockToolbar.cs: Reset
	  custom size requests before calculating the real size
	  request. Fixes issue when getting the default size.

	* MonoDevelop.Ide.Gui/Workbench.cs:
	* MonoDevelop.Ide.Gui/DefaultWorkbench.cs: Ensure the default
	  layout is set after loading the workbench memento.

2010-06-14  Lluis Sanchez Gual  <lluis@novell.com>

	* icons/SplashScreen.png: Updated.

2010-06-14  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/CommonAboutDialog.cs: Add new
	  contributors.

2010-06-14  Lluis Sanchez Gual  <lluis@novell.com>

	* BuildVariables.cs: Bump MD version.

2010-06-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeCompletion/ListWidget.cs: Fixed 'Bug
	  613539 - DOBa does not complete to DynamicObjectBase'.

2010-06-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeCompletion/CompletionData.cs:
	* MonoDevelop.Ide.CodeCompletion/CompletionListWindow.cs:
	  Fixed 'Bug 613830 - Aggressive auto-complete list matching